Add variable for connect vercel adn localhost